2010-01-29  Kester Habermann  <kester@linuxtag.org>  (tiny change)

	* etags.c (Fortran_functions): Handle recursive keyword
	(Bug#5484).

2010-01-11  Glenn Morris  <rgm@gnu.org>

	* ebrowse.c (version):
	* etags.c (print_version):
	* rcs2log (Copyright): Set copyright year to 2010.

2009-12-09  David Robinow  <drobinow@gmail.com>  (tiny change)

	* makefile.w32-in: Use parenthesis for macros for nmake
	compatibility.

2009-11-23  Tobias Ringström  <tobias@ringis.se>  (tiny change)

	* etags.c (absolute_filename): Use memove if we have it for
	overlapping copy.

2009-11-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* make-docfile.c (scan_lisp_file): Also look for `defvaralias'.

2009-10-15  Juanma Barranquero  <lekktu@gmail.com>

	* .gitignore: Add echolisp.tmp.

2009-10-15  Glenn Morris  <rgm@gnu.org>

	* emacsclient.c (print_help_and_exit): Fix bug report instructions.

	* makefile.w32-in (echolisp): New rule.
	(clean): Delete echolisp.tmp.

2009-09-27  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (OTHER_PLATFORM_SUPPORT): Add term/internal.elc,
	term/pc-win.elc, emacs-lisp/easymenu.elc, and term/ns-win.elc, to
	be consistent with src/Makefile.in.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* update-game-score.c (main): Sort scores before trimming them,
	reported by Jason Feng <jfeng@ozbert.com> (bug#4397).

2009-09-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in ($(DESTDIR)${archlibdir}): Set umask to world-readable
	before creating directories and game score files.

2009-08-19  Glenn Morris  <rgm@gnu.org>

	* cvtmail.c: Remove file.
	* Makefile.in (UTILITIES): Remove cvtmail.
	(cvtmail${EXEEXT}): Remove.

2009-07-08  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* b2m.c (main): Ensure that each message ends in two newlines.

2009-07-03  Jason Rumney  <jasonr@gnu.org>

	* emacsclient.c (w32_set_user_model_id): Use standard types.

2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (WINNT_SUPPORT): Add common-win.elc, like